WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91030
Compilation error with GLES2 when using gl2ext.h from ANGLE.
https://bugs.webkit.org/show_bug.cgi?id=91030
Summary
Compilation error with GLES2 when using gl2ext.h from ANGLE.
Noam Rosenthal
Reported
2012-07-11 15:49:23 PDT
Compilation error with GLES2 when the gl2.h driver is of an older version.
Attachments
Patch
(5.13 KB, patch)
2012-07-11 15:55 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch
(2.07 KB, patch)
2012-07-11 17:42 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch
(2.02 KB, patch)
2012-07-11 17:52 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2012-07-11 15:55:25 PDT
Created
attachment 151808
[details]
Patch
Noam Rosenthal
Comment 2
2012-07-11 17:09:48 PDT
Comment on
attachment 151808
[details]
Patch Clearing flags for now.
Noam Rosenthal
Comment 3
2012-07-11 17:42:20 PDT
Created
attachment 151825
[details]
Patch
Noam Rosenthal
Comment 4
2012-07-11 17:52:34 PDT
Created
attachment 151827
[details]
Patch
Kenneth Russell
Comment 5
2012-07-11 17:56:50 PDT
Comment on
attachment 151827
[details]
Patch Looks like the best available solution at this point. r=me
WebKit Review Bot
Comment 6
2012-07-11 20:54:27 PDT
Comment on
attachment 151827
[details]
Patch Clearing flags on attachment: 151827 Committed
r122413
: <
http://trac.webkit.org/changeset/122413
>
WebKit Review Bot
Comment 7
2012-07-11 20:54:32 PDT
All reviewed patches have been landed. Closing bug.
Joshua Netterfield
Comment 8
2012-07-16 11:20:57 PDT
This breaks the BlackBerry build, so I am trying to find a solution. We have a version of gl2ext.h from 2010 which defines the problematic symbols with -PROC. The newest version from the Khronos website (
http://www.khronos.org/registry/gles/api/2.0/gl2ext.h
) also defines the symbols in conflict with -PROC. The ANGLE header, which according to the revision statement is newer than ours but older than Khronos' defines the symbols in conflict without -PROC. Does this conflict only affect BlackBerry? Are any of the headers wrong?
Kenneth Russell
Comment 9
2012-07-18 14:03:55 PDT
(In reply to
comment #8
)
> This breaks the BlackBerry build, so I am trying to find a solution. > > We have a version of gl2ext.h from 2010 which defines the problematic symbols with -PROC. The newest version from the Khronos website (
http://www.khronos.org/registry/gles/api/2.0/gl2ext.h
) also defines the symbols in conflict with -PROC. The ANGLE header, which according to the revision statement is newer than ours but older than Khronos' defines the symbols in conflict without -PROC.
The Khronos gl2ext.h header was just updated to add the -PROC suffix to these symbols based on a bug I filed. Before that, the symbols were defined without the PROC suffix for quite some time -- I'm pretty sure since before 2010.
> Does this conflict only affect BlackBerry? Are any of the headers wrong?
Yes, the conflict currently only affects Blackberry. You should add an #ifdef to the WebCore code to get things compiling.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug