Compilation error with GLES2 when using gl2ext.h from ANGLE. https://bugs.webkit.org/show_bug.cgi?id=91030

Reviewed by Kenneth Russell.

gl2ext.h defines PFNGLRENDERBUFFERSTORAGEMULTISAMPLEIMG and not
PFNGLRENDERBUFFERSTORAGEMULTISAMPLEIMGPROC. This is a bug in the original Khronos header,
but we should work around it until fixed headers are integrated.

* platform/graphics/opengl/Extensions3DOpenGLES.h:
(Extensions3DOpenGLES):
    Removed the "PROC" suffix to work around the header bug.


Canonical link: https://commits.webkit.org/108888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122413 268f45cc-cd09-0410-ab3c-d52691b4dbfc